--- a/index.html
+++ b/index.html
@@ -27,7 +27,18 @@
     </div>
   </div>
 
+  <div class="content">
+  <h2>Jenis Prosedur Intervensi</h2>
+  <div class="card-container">
+    <a href="neurovascular.html" class="card">Neurovascular</a>
+    <a href="peripheral.html" class="card">Peripheral (Thorax/Sclero)</a>
+    <a href="hepatobiliary.html" class="card">Hepatobiliary</a>
+    <a href="genitourinary.html" class="card">Genitourinary</a>
+    <a href="vascular.html" class="card">Vascular/Venous Access</a>
+    <a href="guided.html" class="card">Guided (Biopsy/Drainage)</a>
   </div>
+</div>
+
 
   <footer>
     <p>📞 03-9191 2123 | 📧 <a href="mailto:intervensihpkk@gmail.com">intervensihpkk@gmail.com</a></p>
