--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </div>
 
   <div class="content">
-  <h2>Bahagian Prosedur Intervensi</h2>
+ <h2 style="text-align: center; margin-top: 40px;">Bahagian Prosedur Intervensi</h2>
     <p style="text-align: center; margin-bottom: 20px;">Klik untuk Ketahui Lebih Lanjut</p>
   <div class="card-container">
     <a href="neurovascular.html" class="card">Neurovascular</a>
