--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
 
 
   
-  <div class="header">
-    <div class="overlay">
-      <div class="header-content">
-        <h1>Laman e-Intervensi HPKK</h1>
-        <p>
-          Selamat datang!<br>
-          Laman ini menyediakan maklumat penting<br>
-          untuk pesakit yang akan menjalani prosedur intervensi di<br>
-          Hospital Tunku Ampuan Besar Tuanku Aishah Rohani,<br>
-          Hospital Pakar Kanak-Kanak UKM.
-        </p>
-      </div>
+<div class="header">
+  <div class="overlay">
+    <div class="header-content">
+      <h1>Laman e-Intervensi HPKK</h1>
+      <p>
+        <span class="centered-text">Selamat datang!</span><br>
+        Laman ini menyediakan maklumat penting<br>
+        untuk pesakit yang akan menjalani prosedur intervensi di<br>
+        Hospital Tunku Ampuan Besar Tuanku Aishah Rohani,<br>
+        Hospital Pakar Kanak-Kanak UKM.
+      </p>
     </div>
   </div>
+</div>
 
   <div class="content">
  <h2 style="text-align: center; margin-top: 40px;">Bahagian Prosedur Intervensi</h2>
