--- a/neurovascular.html
+++ b/neurovascular.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="ms">
 <head>
+    <a href="index.html" class="back-button">← Kembali ke Laman Utama</a>
+</div>
   <meta charset="UTF-8">
   <title>Neurovascular | e-Intervensi HPKK</title>
   <link rel="stylesheet" href="style.css">
