--- a/neurovascular.html
+++ b/neurovascular.html
@@ -22,12 +22,21 @@
     <h2>Apa Itu Prosedur Neurovascular?</h2>
     <p>Prosedur intervensi neurovascular melibatkan rawatan bagi salur darah otak, aneurisme, AVM dan strok menggunakan teknik radiologi intervensi...</p>
     
-    <h3>Contoh Prosedur:</h3>
-    <ul>
-      <li>Embolisasi AVM</li>
-      <li>Coiling Aneurisme</li>
-      <li>Mechanical Thrombectomy untuk strok akut</li>
-    </ul>
+<div class="procedure-list">
+  <a href="cerebral-angiogram.html">Cerebral Angiogram</a>
+  <a href="embolization-avm-avf.html">Embolization of AVM/AVF</a>
+  <a href="intracranial-stenting.html">Intracranial Angioplasty / Stenting</a>
+  <a href="spinal-angiogram.html">Spinal Angiogram</a>
+  <a href="spinal-embolization.html">Spinal Embolization</a>
+  <a href="carotid-stenting.html">Extracranial (Carotid) Angioplasty / Stenting</a>
+  <a href="carotid-angiogram.html">Carotid Angiogram</a>
+  <a href="carotid-embolization.html">Embolization of Carotid</a>
+  <a href="intracranial-thrombectomy.html">Intracranial Thrombectomy</a>
+  <a href="myelogram.html">Myelogram</a>
+  <a href="vaso-ct.html">Vaso CT</a>
+  <a href="mechanical-thrombectomy.html">Mechanical Thrombectomy</a>
+</div>
+
 
     <p>Jika anda mempunyai sebarang pertanyaan, sila hubungi kami.</p>
   </div>
