--- a/neurovascular.html
+++ b/neurovascular.html
@@ -5,7 +5,7 @@
 </div>
   <meta charset="UTF-8">
   <title>Neurovascular | e-Intervensi HPKK</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="neuro.css">
 </head>
 <body>
 
