--- a/neurovascular.html
+++ b/neurovascular.html
@@ -24,6 +24,7 @@
 <!-- persediaan.html -->
 <section class="container">
   <h1>Persediaan Sebelum Prosedur 🩺</h1>
+     <div class="grid-container">
 
   <div class="step">
     <h2>🏥 Kemasukan ke Wad</h2>
