--- a/neurovascular.html
+++ b/neurovascular.html
@@ -26,7 +26,7 @@
     <div class="grid-container">
 
       <div class="step-persediaan">
-        <h2>1. 🏥 Kemasukan ke Wad</h2>
+        <h2>🏥 Kemasukan ke Wad</h2>
         <ul>
           <li>Masuk wad sehari sebelum prosedur</li>
           <li>Daftar di Unit Hasil:
@@ -39,7 +39,7 @@
       </div>
 
       <div class="step-persediaan">
-        <h2>2. 🧪 Ujian Darah</h2>
+        <h2>🧪 Ujian Darah</h2>
         <p>Ambil dalam tempoh 2 minggu sebelum:</p>
         <ul>
           <li>FBC</li>
@@ -49,7 +49,7 @@
       </div>
 
       <div class="step-persediaan">
-        <h2>3. 💊 Ubat & Penyakit</h2>
+        <h2>💊 Ubat & Penyakit</h2>
         <ul>
           <li>Maklumkan jika ada HIV, Hepatitis, MRSA</li>
           <li>Maklumkan jika ada kencing manis – tanya doktor tentang ubat</li>
@@ -58,7 +58,7 @@
       </div>
 
       <div class="step-persediaan">
-        <h2>4. 📝 Keizinan & Penerangan</h2>
+        <h2>📝 Keizinan & Penerangan</h2>
         <ul>
           <li>Dengar penerangan prosedur</li>
           <li>Tandatangan borang keizinan</li>
@@ -66,7 +66,7 @@
       </div>
 
       <div class="step-persediaan">
-        <h2>5. ⚠️ Perkara Perlu Dimaklumkan</h2>
+        <h2>⚠️ Perkara Perlu Dimaklumkan</h2>
         <ul>
           <li>Disyaki mengandung</li>
           <li>Alahan (ubat, makanan laut, dsb.)</li>
@@ -77,27 +77,27 @@
       </div>
 
       <div class="step-persediaan">
-        <h2>6. 🪒 Persediaan Fizikal</h2>
+        <h2>🪒 Persediaan Fizikal</h2>
         <p>Kawasan pubik/groin/aksilari akan dicukur sebelum prosedur</p>
       </div>
 
       <div class="step-persediaan">
-        <h2>7. ⏳ Puasa</h2>
+        <h2>⏳ Puasa</h2>
         <p>Puasa 6 jam sebelum prosedur</p>
       </div>
 
       <div class="step-persediaan">
-        <h2>8. 💿 Imej & Laporan</h2>
+        <h2>💿 Imej & Laporan</h2>
         <p>Bawa filem/CD & laporan lama jika ada</p>
       </div>
 
       <div class="step-persediaan">
-        <h2>9. 💍 Barang Peribadi</h2>
+        <h2>💍 Barang Peribadi</h2>
         <p>Jangan pakai barang kemas atau bawa barang berharga</p>
       </div>
 
       <div class="step-persediaan">
-        <h2>10. 💵 Bayaran Implan</h2>
+        <h2>💵 Bayaran Implan</h2>
         <ul>
           <li>Bayar sebelum / pada hari prosedur</li>
           <li>Serah sebutharga & surat sokongan (jika ada)</li>
