--- a/neurovascular.html
+++ b/neurovascular.html
@@ -30,6 +30,18 @@
     });
 </script>
 
+      <section class="penjagaan-container">
+  <h2>Penjagaan Selepas Prosedur 💖</h2>
+  <div class="step">...</div>
+  ...
+</section>
+<div id="penjagaan-container"></div>
+
+        fetch('persediaan.html')
+    .then(response => response.text())
+    .then(data => {
+      document.getElementById('persediaan-container').innerHTML = data;
+    });
   </div>
 </section>
 
