--- a/neurovascular.html
+++ b/neurovascular.html
@@ -26,7 +26,7 @@
     <div id="persediaan-container"></div>
   </section>
 
-  <section class="penjagaan-section">
+  <section class="penjagaan-section light-blue">
     <div id="penjagaan-container"></div>
   </section>
 
