--- a/neurovascular.html
+++ b/neurovascular.html
@@ -13,7 +13,7 @@
 
   <a href="index.html" class="back-button">← Kembali ke Laman Utama</a>
 
-  <div class="header subpage-header">
+<div class="header">
     <div class="overlay">
       <div class="header-content">
         <h1>Prosedur Neurovascular</h1>
