--- a/neurovascular.html
+++ b/neurovascular.html
@@ -4,16 +4,16 @@
   <meta charset="UTF-8">
   <title>Neurovascular | e-Intervensi HPKK</title>
 
-  <link rel="stylesheet" href="neuro.css">
   <link rel="stylesheet" href="persediaan.css">
   <link rel="stylesheet" href="penjagaan.css">
+  <link rel="stylesheet" href="neuro.css">
 </head>
 
 <body>
 
   <a href="index.html" class="back-button">← Kembali ke Laman Utama</a>
 
-<div class="header">
+  <div class="header">
     <div class="overlay">
       <div class="header-content">
         <h1>Prosedur Neurovascular</h1>
@@ -22,15 +22,15 @@
     </div>
   </div>
 
-  <section class="persediaan-section">
+  <section class="content section-purple">
     <div id="persediaan-container"></div>
   </section>
 
-  <section class="penjagaan-section light-blue">
+  <section class="content section-blue">
     <div id="penjagaan-container"></div>
   </section>
 
-  <div class="content">
+  <div class="content section-peach">
     <h2>Apa Itu Prosedur Neurovascular?</h2>
     <p>Prosedur intervensi neurovascular melibatkan rawatan bagi salur darah otak, aneurisme, AVM dan strok menggunakan teknik radiologi intervensi...</p>
 
@@ -52,7 +52,6 @@
     <p>Jika anda mempunyai sebarang pertanyaan, sila hubungi kami.</p>
   </div>
 
-  <!-- Footer -->
   <footer>
     <p>📞 03-9174 2123 | 📧 <a href="mailto:intervensihpkk@gmail.com">intervensihpkk@gmail.com</a></p>
     <p>© 2025 Hospital Pakar Kanak-Kanak UKM</p>
