--- a/peripheral.html
+++ b/peripheral.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Peripheral (Thorax/Sclero) | e-Intervensi HPKK</title>
 
-  <link rel="stylesheet" href="neuro.css">
+  <link rel="stylesheet" href="peripheral.css">
   <link rel="stylesheet" href="persediaan.css">
   <link rel="stylesheet" href="penjagaan.css">
 </head>
