--- a/persediaan.html
+++ b/persediaan.html
@@ -1,4 +1,20 @@
-  <section class="persediaan-section">
+<section class="persediaan-section">
+  <h1>Persediaan Sebelum Prosedur</h1>
+  <div class="grid-container">
+    <div class="step-persediaan">Puasa sekurang-kurangnya 6 jam sebelum prosedur</div>
+    <div class="step-persediaan">Maklumkan alahan kepada ubat atau kontras</div>
+    <div class="step-persediaan">Bawa surat rujukan dan kad pengenalan</div>
+    <div class="step-persediaan">Hentikan ubat pencair darah jika diarahkan</div>
+    <div class="step-persediaan">Pastikan ada penjaga atau waris menemani</div>
+    <div class="step-persediaan">Datang awal ke hospital (30 minit sebelum)</div>
+    <div class="step-persediaan">Pakai pakaian yang longgar dan selesa</div>
+    <div class="step-persediaan">Maklumkan jika mengandung</div>
+    <div class="step-persediaan">Sediakan maklumat kesihatan terdahulu</div>
+    <div class="step-persediaan">Pastikan semua dokumen telah lengkap</div>
+  </div>
+</section>
+
+<section class="persediaan-section">
     <h1>Persediaan Sebelum Prosedur 🩺</h1>
     <div class="grid-container">
 
