--- a/index.html
+++ b/index.html
@@ -6,11 +6,6 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-
-
-
-
   
 <div class="header">
   <div class="overlay">
@@ -27,9 +22,20 @@
   </div>
 </div>
 
-  <div class="content">
- <h2 style="text-align: center; margin-top: 40px;">Bahagian Prosedur Intervensi</h2>
-    <p style="text-align: center; margin-bottom: 20px;">Klik untuk Ketahui Lebih Lanjut</p>
+<div class="intervention-section fade-in delay-1">
+  <div class="overlay-text">
+    <h2>Apakah Prosedur Intervensi?</h2>
+    <p>
+      Prosedur intervensi adalah teknik rawatan invasif minimum<br>
+      menggunakan bantuan imejan seperti X-ray, CT scan dan ultrasound.<br>
+      Ia dilakukan oleh pakar untuk diagnosis dan rawatan yang lebih tepat.
+    </p>
+  </div>
+</div>
+
+<div class="content">
+  <h2 style="text-align: center; margin-top: 40px;">Bahagian Prosedur Intervensi</h2>
+  <p style="text-align: center; margin-bottom: 20px;">Klik untuk Ketahui Lebih Lanjut</p>
   <div class="card-container">
     <a href="neurovascular.html" class="card">Neurovascular</a>
     <a href="peripheral.html" class="card">Peripheral (Thorax/Sclero)</a>
