--- a/index.html
+++ b/index.html
@@ -7,37 +7,48 @@
 </head>
 <body>
   
-<div class="header">
-  <div class="overlay">
-    <div class="header-content">
-      <h1>Laman e-Intervensi HPKK</h1>
+  <div class="header">
+    <div class="overlay">
+      <div class="header-content">
+        <h1>Laman e-Intervensi HPKK</h1>
+        <p>
+          <span class="centered-text">Selamat datang!</span><br>
+          Laman ini menyediakan maklumat penting<br>
+          untuk pesakit yang akan menjalani prosedur intervensi di<br>
+          Hospital Tunku Ampuan Besar Tuanku Aishah Rohani,<br>
+          Hospital Pakar Kanak-Kanak UKM.
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div class="intervention-section fade-in delay-1">
+    <div class="overlay-text">
+      <h2>Apakah Prosedur Intervensi?</h2>
       <p>
-        <span class="centered-text">Selamat datang!</span><br>
-        Laman ini menyediakan maklumat penting<br>
-        untuk pesakit yang akan menjalani prosedur intervensi di<br>
-        Hospital Tunku Ampuan Besar Tuanku Aishah Rohani,<br>
-        Hospital Pakar Kanak-Kanak UKM.
+        Prosedur intervensi adalah teknik rawatan invasif minimum<br>
+        menggunakan bantuan imejan seperti X-ray, CT scan dan ultrasound.<br>
+        Ia dilakukan oleh pakar untuk diagnosis dan rawatan yang lebih tepat.
       </p>
     </div>
-    <div class="intervention-section fade-in delay-1">
-  <div class="overlay-text">
-<div class="content">
-  <h2 style="text-align: center; margin-top: 40px;">Bahagian Prosedur Intervensi</h2>
-  <p style="text-align: center; margin-bottom: 20px;">Klik untuk Ketahui Lebih Lanjut</p>
-  <div class="card-container">
-    <a href="neurovascular.html" class="card">Neurovascular</a>
-    <a href="peripheral.html" class="card">Peripheral (Thorax/Sclero)</a>
-    <a href="hepatobiliary.html" class="card">Hepatobiliary</a>
-    <a href="genitourinary.html" class="card">Genitourinary</a>
-    <a href="vascular.html" class="card">Vascular/Venous Access</a>
-    <a href="guided.html" class="card">Guided (Biopsy/Drainage)</a>
   </div>
-</div>
 
+  <div class="content">
+    <h2 style="text-align: center; margin-top: 40px;">Bahagian Prosedur Intervensi</h2>
+    <p style="text-align: center; margin-bottom: 20px;">Klik untuk Ketahui Lebih Lanjut</p>
+    <div class="card-container">
+      <a href="neurovascular.html" class="card">Neurovascular</a>
+      <a href="peripheral.html" class="card">Peripheral (Thorax/Sclero)</a>
+      <a href="hepatobiliary.html" class="card">Hepatobiliary</a>
+      <a href="genitourinary.html" class="card">Genitourinary</a>
+      <a href="vascular.html" class="card">Vascular/Venous Access</a>
+      <a href="guided.html" class="card">Guided (Biopsy/Drainage)</a>
+    </div>
+  </div>
 
-</body>
-      <footer>
+  <footer>
     <p>📞 03-9191 2123 | 📧 <a href="mailto:intervensihpkk@gmail.com">intervensihpkk@gmail.com</a></p>
   </footer>
 
+</body>
 </html>
