--- a/neurovascular.html
+++ b/neurovascular.html
@@ -22,11 +22,11 @@
     </div>
   </div>
 
-  <section class="content section-purple">
+  <section class="persediaan-section">
     <div id="persediaan-container"></div>
   </section>
 
-  <section class="content section-blue">
+  <section class="penjagaan-section light-blue">
     <div id="penjagaan-container"></div>
   </section>
 
