--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
+<!DOCTYPE html>
+<html lang="ms">
+<head>
+  <meta charset="UTF-8">
+  <title>Laman e-Intervensi HPKK</title>
+  <link rel="stylesheet" href="style.css">
+</head>
 <body>
-  <div class="header full-screen">
+  
+  <div class="header">
     <div class="overlay">
       <div class="header-content">
         <h1>Laman e-Intervensi HPKK</h1>
@@ -10,24 +18,34 @@
           Hospital Tunku Ampuan Besar Tuanku Aishah Rohani,<br>
           Hospital Pakar Kanak-Kanak UKM.
         </p>
-
-        <div class="card-section">
-          <h2>Bahagian Prosedur Intervensi</h2>
-          <p>Klik untuk Ketahui Lebih Lanjut</p>
-          <div class="card-container">
-            <a href="neurovascular.html" class="card">Neurovascular</a>
-            <a href="peripheral.html" class="card">Peripheral (Thorax/Sclero)</a>
-            <a href="hepatobiliary.html" class="card">Hepatobiliary</a>
-            <a href="genitourinary.html" class="card">Genitourinary</a>
-            <a href="vascular.html" class="card">Vascular/Venous Access</a>
-            <a href="guided.html" class="card">Guided (Biopsy/Drainage)</a>
-          </div>
-        </div>
       </div>
+    </div>
+  </div>
+
+  <div class="content">
+    <h2 style="text-align: center; margin-top: 40px;">Bahagian Prosedur Intervensi</h2>
+    <p style="text-align: center; margin-bottom: 20px;">Klik untuk Ketahui Lebih Lanjut</p>
+    <div class="card-container">
+      <a href="neurovascular.html" class="card">Neurovascular</a>
+      <a href="peripheral.html" class="card">Peripheral (Thorax/Sclero)</a>
+      <a href="hepatobiliary.html" class="card">Hepatobiliary</a>
+      <a href="genitourinary.html" class="card">Genitourinary</a>
+      <a href="vascular.html" class="card">Vascular/Venous Access</a>
+      <a href="guided.html" class="card">Guided (Biopsy/Drainage)</a>
     </div>
   </div>
 
   <footer>
     <p>📞 03-9191 2123 | 📧 <a href="mailto:intervensihpkk@gmail.com">intervensihpkk@gmail.com</a></p>
   </footer>
+
 </body>
+</html> bahagian     <h2 style="text-align: center; margin-top: 40px;">Bahagian Prosedur Intervensi</h2>
+    <p style="text-align: center; margin-bottom: 20px;">Klik untuk Ketahui Lebih Lanjut</p>
+    <div class="card-container">
+      <a href="neurovascular.html" class="card">Neurovascular</a>
+      <a href="peripheral.html" class="card">Peripheral (Thorax/Sclero)</a>
+      <a href="hepatobiliary.html" class="card">Hepatobiliary</a>
+      <a href="genitourinary.html" class="card">Genitourinary</a>
+      <a href="vascular.html" class="card">Vascular/Venous Access</a>
+      <a href="guided.html" class="card">Guided (Biopsy/Drainage)</a>
