--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+
   <div class="header">
     <div class="overlay">
       <div class="header-content">
@@ -18,9 +18,13 @@
           Hospital Tunku Ampuan Besar Tuanku Aishah Rohani,<br>
           Hospital Pakar Kanak-Kanak UKM.
         </p>
+      </div>
+    </div>
+  </div>
 
-<h2 style="text-align: center; margin-top: 40px;">Bahagian Prosedur Intervensi</h2>
-    <p style="text-align: center; margin-bottom: 20px;">Klik untuk Ketahui Lebih Lanjut</p>
+  <div class="content">
+    <h2>Bahagian Prosedur Intervensi</h2>
+    <p>Klik untuk Ketahui Lebih Lanjut</p>
     <div class="card-container">
       <a href="neurovascular.html" class="card">Neurovascular</a>
       <a href="peripheral.html" class="card">Peripheral (Thorax/Sclero)</a>
@@ -34,4 +38,6 @@
   <footer>
     <p>📞 03-9191 2123 | 📧 <a href="mailto:intervensihpkk@gmail.com">intervensihpkk@gmail.com</a></p>
   </footer>
+
 </body>
+</html>
