--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <div class="content">
           <h2 style="text-align: center;">Bahagian Prosedur Intervensi</h2>
-          <p class="instruction-text">Klik untuk Ketahui Lebih Lanjut</p>
+          <p class="no-click">Klik untuk Ketahui Lebih Lanjut</p>
           <div class="card-container">
             <a href="neurovascular.html" class="card">Neurovascular</a>
             <a href="peripheral.html" class="card">Peripheral (Thorax/Sclero)</a>
