--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </div>
   </div>
 
-  <footer>
+  <footer class="site-footer")>
     <p>📞 03-9191 2123 | 📧 <a href="mailto:intervensihpkk@gmail.com">intervensihpkk@gmail.com</a></p>
   </footer>
 
