--- a/index.html
+++ b/index.html
@@ -19,25 +19,28 @@
           Hospital Tunku Ampuan Besar Tuanku Aishah Rohani,<br>
           Hospital Pakar Kanak-Kanak UKM.
         </p>
+
+        <div class="content">
+          <h2 style="text-align: center;">Bahagian Prosedur Intervensi</h2>
+          <p class="no-click">Klik untuk Ketahui Lebih Lanjut</p>
+          <div class="card-container">
+            <a href="neurovascular.html" class="card">Neurovascular</a>
+            <a href="peripheral.html" class="card">Peripheral (Thorax/Sclero)</a>
+            <a href="hepatobiliary.html" class="card">Hepatobiliary</a>
+            <a href="genitourinary.html" class="card">Genitourinary</a>
+            <a href="vascular.html" class="card">Vascular/Venous Access</a>
+            <a href="guided.html" class="card">Guided (Biopsy/Drainage)</a>
+          </div>
+        </div>
+
+
+        <footer class="site-footer">
+          <p>📞 03-9191 2123 | 📧 <a href="mailto:intervensihpkk@gmail.com">intervensihpkk@gmail.com</a></p>
+        </footer>
+
       </div>
     </div>
   </div>
 
-  <div class="content">
-    <h2>Bahagian Prosedur Intervensi</h2>
-    <p class="no-click">Klik untuk Ketahui Lebih Lanjut</p>
-    <div class="card-container">
-      <a href="neurovascular.html" class="card">Neurovascular</a>
-      <a href="peripheral.html" class="card">Peripheral (Thorax/Sclero)</a>
-      <a href="hepatobiliary.html" class="card">Hepatobiliary</a>
-      <a href="genitourinary.html" class="card">Genitourinary</a>
-      <a href="vascular.html" class="card">Vascular/Venous Access</a>
-      <a href="guided.html" class="card">Guided (Biopsy/Drainage)</a>
-    </div>
-  </div>
-
-  <footer class="site-footer">
-    <p>📞 03-9191 2123 | 📧 <a href="mailto:intervensihpkk@gmail.com">intervensihpkk@gmail.com</a></p>
-  </footer>
 </body>
 </html>
