--- a/index.html
+++ b/index.html
@@ -8,38 +8,38 @@
 </head>
 <body>
 
-  <div class="header">
-    <div class="overlay">
-      <div class="header-content">
-        <h1>Laman e-Intervensi HPKK</h1>
-        <p>
-          <span class="centered-text">Selamat datang!</span><br>
-          Laman ini menyediakan maklumat penting<br>
-          untuk pesakit yang akan menjalani prosedur intervensi di<br>
-          Hospital Tunku Ampuan Besar Tuanku Aishah Rohani,<br>
-          Hospital Pakar Kanak-Kanak UKM.
-        </p>
-
-        <div class="content">
-          <h2 style="text-align: center;">Bahagian Prosedur Intervensi</h2>
-          <p class="no-click">Klik untuk Ketahui Lebih Lanjut</p>
-          <div class="card-container">
-            <a href="neurovascular.html" class="card">Neurovascular</a>
-            <a href="peripheral.html" class="card">Peripheral (Thorax/Sclero)</a>
-            <a href="hepatobiliary.html" class="card">Hepatobiliary</a>
-            <a href="genitourinary.html" class="card">Genitourinary</a>
-            <a href="vascular.html" class="card">Vascular/Venous Access</a>
-            <a href="guided.html" class="card">Guided (Biopsy/Drainage)</a>
-          </div>
+  <div class="page-container">
+    <header class="header">
+      <div class="overlay">
+        <div class="header-content">
+          <h1>Laman e-Intervensi HPKK</h1>
+          <p>
+            <span class="centered-text">Selamat datang!</span><br>
+            Laman ini menyediakan maklumat penting<br>
+            untuk pesakit yang akan menjalani prosedur intervensi di<br>
+            Hospital Tunku Ampuan Besar Tuanku Aishah Rohani,<br>
+            Hospital Pakar Kanak-Kanak UKM.
+          </p>
         </div>
-
-
-        <footer class="site-footer">
-          <p>📞 03-9191 2123 | 📧 <a href="mailto:intervensihpkk@gmail.com">intervensihpkk@gmail.com</a></p>
-        </footer>
-
       </div>
-    </div>
+    </header>
+
+    <main class="content">
+      <h2 style="text-align: center;">Bahagian Prosedur Intervensi</h2>
+      <p class="no-click">Klik untuk Ketahui Lebih Lanjut</p>
+      <div class="card-container">
+        <a href="neurovascular.html" class="card">Neurovascular</a>
+        <a href="peripheral.html" class="card">Peripheral (Thorax/Sclero)</a>
+        <a href="hepatobiliary.html" class="card">Hepatobiliary</a>
+        <a href="genitourinary.html" class="card">Genitourinary</a>
+        <a href="vascular.html" class="card">Vascular/Venous Access</a>
+        <a href="guided.html" class="card">Guided (Biopsy/Drainage)</a>
+      </div>
+    </main>
+
+    <footer class="site-footer">
+      <p>📞 03-9191 2123 | 📧 <a href="mailto:intervensihpkk@gmail.com">intervensihpkk@gmail.com</a></p>
+    </footer>
   </div>
 
 </body>
