--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="header-content">
           <h1>Laman e-Intervensi HPKK</h1>
           <p>
-            <span class="centered-text">Selamat datang!</span><br>
+            Selamat datang!<br>
             Laman ini menyediakan maklumat penting<br>
             untuk pesakit yang akan menjalani prosedur intervensi di<br>
             Hospital Tunku Ampuan Besar Tuanku Aishah Rohani,<br>
@@ -22,10 +22,9 @@
           </p>
         </div>
       </div>
-    </header>
 
     <main class="content">
-      <h2 style="text-align: center;">Bahagian Prosedur Intervensi</h2>
+      <h2>Bahagian Prosedur Intervensi</h2>
       <p class="no-click">Klik untuk Ketahui Lebih Lanjut</p>
       <div class="card-container">
         <a href="neurovascular.html" class="card">Neurovascular</a>
@@ -43,4 +42,5 @@
   </div>
 
 </body>
+      </header>
 </html>
