--- a/index.html
+++ b/index.html
@@ -8,42 +8,35 @@
 </head>
 <body>
 
-<div class="page-container">
+<div class="header">
+  <div class="overlay">
+    <div class="header-content">
+      <h1>Laman e-Intervensi HPKK</h1>
+      <p>
+        Selamat datang!<br>
+        Laman ini menyediakan maklumat penting<br>
+        untuk pesakit yang akan menjalani prosedur intervensi di<br>
+        Hospital Tunku Ampuan Besar Tuanku Aishah Rohani,<br>
+        Hospital Pakar Kanak-Kanak UKM.
+      </p>
 
-  <header class="header">
-    <div class="overlay">
-      <div class="header-content">
-        <h1>Laman e-Intervensi HPKK</h1>
-        <p>
-          Selamat datang!<br>
-          Laman ini menyediakan maklumat penting<br>
-          untuk pesakit yang akan menjalani prosedur intervensi di<br>
-          Hospital Tunku Ampuan Besar Tuanku Aishah Rohani,<br>
-          Hospital Pakar Kanak-Kanak UKM.
-        </p>
+      <h2>Bahagian Prosedur Intervensi</h2>
+      <p class="no-click">Klik untuk Ketahui Lebih Lanjut</p>
+      <div class="card-container">
+        <a href="neurovascular.html" class="card">Neurovascular</a>
+        <a href="peripheral.html" class="card">Peripheral (Thorax/Sclero)</a>
+        <a href="hepatobiliary.html" class="card">Hepatobiliary</a>
+        <a href="genitourinary.html" class="card">Genitourinary</a>
+        <a href="vascular.html" class="card">Vascular/Venous Access</a>
+        <a href="guided.html" class="card">Guided (Biopsy/Drainage)</a>
       </div>
-    </div>
-  </header>
 
-  <main class="content">
-    <h2>Bahagian Prosedur Intervensi</h2>
-    <p class="no-click">Klik untuk Ketahui Lebih Lanjut</p>
-    <div class="card-container">
-      <a href="neurovascular.html" class="card">Neurovascular</a>
-      <a href="peripheral.html" class="card">Peripheral (Thorax/Sclero)</a>
-      <a href="hepatobiliary.html" class="card">Hepatobiliary</a>
-      <a href="genitourinary.html" class="card">Genitourinary</a>
-      <a href="vascular.html" class="card">Vascular/Venous Access</a>
-      <a href="guided.html" class="card">Guided (Biopsy/Drainage)</a>
+      <footer class="site-footer">
+        <p>📞 03-9191 2123 | 📧 <a href="mailto:intervensihpkk@gmail.com">intervensihpkk@gmail.com</a></p>
+      </footer>
     </div>
-  </main>
-
+  </div>
 </div>
 
-    <footer class="site-footer">
-      <p>📞 03-9191 2123 | 📧 <a href="mailto:intervensihpkk@gmail.com">intervensihpkk@gmail.com</a></p>
-    </footer>
-  </div>
 </body>
-
 </html>
