--- a/index.html
+++ b/index.html
@@ -20,23 +20,26 @@
         Hospital Pakar Kanak-Kanak UKM.
       </p>
 
-      <h2>Bahagian Prosedur Intervensi</h2>
-      <p class="no-click">Klik untuk Ketahui Lebih Lanjut</p>
-      <div class="card-container">
-        <a href="neurovascular.html" class="card">Neurovascular</a>
-        <a href="peripheral.html" class="card">Peripheral (Thorax/Sclero)</a>
-        <a href="hepatobiliary.html" class="card">Hepatobiliary</a>
-        <a href="genitourinary.html" class="card">Genitourinary</a>
-        <a href="vascular.html" class="card">Vascular/Venous Access</a>
-        <a href="guided.html" class="card">Guided (Biopsy/Drainage)</a>
+      <div class="procedure-section">
+        <h2>Bahagian Prosedur Intervensi</h2>
+        <p class="no-click">Klik untuk Ketahui Lebih Lanjut</p>
+        <div class="card-container">
+          <a href="neurovascular.html" class="card">Neurovascular</a>
+          <a href="peripheral.html" class="card">Peripheral (Thorax/Sclero)</a>
+          <a href="hepatobiliary.html" class="card">Hepatobiliary</a>
+          <a href="genitourinary.html" class="card">Genitourinary</a>
+          <a href="vascular.html" class="card">Vascular/Venous Access</a>
+          <a href="guided.html" class="card">Guided (Biopsy/Drainage)</a>
+        </div>
       </div>
+
+    </div>
 
       <footer class="site-footer">
         <p>📞 03-9191 2123 | 📧 <a href="mailto:intervensihpkk@gmail.com">intervensihpkk@gmail.com</a></p>
       </footer>
     </div>
   </div>
-</div>
 
 </body>
 </html>
